--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 
 script:
     - python --version
-    - py.test -v --cov=make_midi ./
+    - py.test -v --cov=./ ./
 
 after_success:
     - coveralls
